# minor3

./: Box.cpp  Box.h  CMakeLists.txt  Letter.cpp  Letter.h  Logger.cpp  Logger.h  MetalCrate.cpp  MetalCrate.h  NullPackage.cpp  NullPackage.h  Package.cpp  Package.h  PackageFactory.cpp  PackageFactory.h  README.md  Truck.cpp  Truck.h  WoodCrate.cpp  WoodCrate.h  main.cpp  manifest.txt
